--- a/template/account-page.html
+++ b/template/account-page.html
@@ -1,6 +1,6 @@
 <div class="wrapper">
     <div class="row">
-        <div class="col-sm-3 p-5 white rounded">
+        <div class="col-md-3 p-5 white rounded mt-3">
             <div class="profil-adatok">
                 <h3>Profiom</h3>
                 <div class="text-center mt-4">
@@ -16,10 +16,14 @@
 
             </div>
         </div>
-        <div class="col-sm-9 p-5">
-            <div class="profil-receptek">
-                <h3 class="mb-5">Receptjeim</h3>
-                <div class="row">
+        <div class="col-md-9">
+            <div class="profil-receptek white">
+                <div class="cover-pic">
+                    <h2>Receptjeim</h2>
+                    <img src="%!COVERIMG!%" alt="cover-pic" class="img-fluid">
+                </div>
+
+                <div class="row p-5">
 
 
 
