--- a/template/navigation.html
+++ b/template/navigation.html
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-expand-md navbar-light bg-light">
 <ul class="navbar-nav mr-auto">
     <a class="navbar-brand" href="index.php"><img src="%!LOGO!%" alt="receptkönyv logó" id="logo"></a>
+    <a class="nav-item nav-link" href="index.php"><li>Főoldal</li></a>
     <a class="nav-item nav-link" href="index.php?p=receptek"><li>Receptek</li></a>
     <a class="nav-item nav-link" href="#"><li>Felhasználók</li></a>
         %!NAVITEMUPLOAD!%
