--- a/template/user-recept-card.html
+++ b/template/user-recept-card.html
@@ -1,5 +1,5 @@
-<div class="card-deck col-lg-4 col-md-6 mb-3" id="%!RECEPTID!%">
-    <div class="card pb-4 shadow-md">
+<div class="card-deck col-lg-4 col-md-6 mb-3 shadow p-0 rounded" id="%!RECEPTID!%">
+    <div class="card pb-4">
         <a href="%!RECEPTLINK!%">
             <img class="card-img-top" src="%!RECEPTKEP!%" alt="recept kep">
         </a>
