--- a/template/recept-card.html
+++ b/template/recept-card.html
@@ -1,5 +1,5 @@
-<div class="card-deck col-lg-4 col-md-6 mb-5" id="%!RECEPTID!%">
-    <div class="card shadow-sm">
+<div class="card-deck col-lg-4 col-md-6 mb-5 shadow rounded" id="%!RECEPTID!%">
+    <div class="card">
         <a href="%!RECEPTLINK!%">
             <img class="card-img-top"
                 src="%!RECEPTKEP!%"
