--- a/template/recept-feltoltes.html
+++ b/template/recept-feltoltes.html
@@ -11,8 +11,8 @@
 
 
         <div class="form-group py-3">
-            <label for="formFile" class="form-label">Képek feltöltése</label>
-            <input class="form-control" type="file" id="formFile" multiple accept="image/png, image/jpeg">
+            <label for="formFile" class="form-label">Kép feltöltése</label>
+            <input class="form-control" type="file" id="formFile" accept="image/png, image/jpeg" name="kep">
         </div>
 
         <div class="container mt-3">
@@ -34,10 +34,10 @@
                 <div class="form-grou col-3">
                     <label for="nehezseg" class="form-label">Nehézség</label>
                     <select class="form-select" id="nehezseg" name="nehezseg">
-                        <option value="kezdo">Kezdő</option>
-                        <option value="konnyu">Könnyű</option>
-                        <option value="kozepes" selected>Közepes</option>
-                        <option value="nehez">Nehéz</option>
+                        <option value="kezdő">Kezdő</option>
+                        <option value="könnyű">Könnyű</option>
+                        <option value="közepes" selected>Közepes</option>
+                        <option value="nehéz">Nehéz</option>
                         <option value="profi">Profi</option>
                     </select>
                 </div>
