--- a/template/404.html
+++ b/template/404.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <h1 style="color: red;">A megadott oldal nem található!</h1>
-    </body>
+
+<head>
+    <title>TODO supply a title</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+</head>
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+    h1 {
+        font-family: "Montserrat", sans-serif;
+        background-color: white;
+        padding: 10px;
+    }
+</style>
+
+<body style="background-image: url('content/background-pattern.png');">
+    <div class="d-flex justify-content-center align-items-center vh-100" style="flex-direction: column;">
+        <img src="content/Logo.png" alt="logo" style="width: 200px;" class="mb-4">
+        <div class="text-center">
+            <h1>A megadott oldal nem található! :(</h1>
+        </div>
+    </div>
+    </div>
+</body>
+
 </html>
