--- a/template/maintance.html
+++ b/template/maintance.html
@@ -4,8 +4,18 @@
         <title>Maintance</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     </head>
-    <body>
-        <h1>Az oldal jelenleg nem üzemel!</h1>
+    <style>
+        h1{
+            color: red;
+            background-color: white;
+        }
+    </style>
+    <body  style="background-image: url('content/background-pattern.png');">
+        <div class="d-flex justify-content-center align-items-center vh-100">
+            <div class="text-center"><h1>Az oldal jelenleg nem üzemel :(</h1></div>
+        </div>
+    </div>
     </body>
 </html>
