--- a/template/receptek.html
+++ b/template/receptek.html
@@ -3,7 +3,7 @@
 <div class="wrapper">
     <div class="row">
 
-        <div class="col-lg-3 col-md-4 col-sm-12">
+        <div class="col-lg-3 col-md-4 col-sm-12 mt-3">
             <div class="filter shadow-sm">
                 <h4 class="p-4">Szűrők</h4>
                 
