--- a/template/recept-feltoltes.html
+++ b/template/recept-feltoltes.html
@@ -1,3 +1,4 @@
+<h6 class="text-center" style="background-color: %!COLOR!%; padding: 5px; color: white;">%!RESULT!%</h6>
 
 <div class="container upload-form my-4">
     <h2 class="text-center my-4">Recept feltöltése</h2>
@@ -114,3 +115,4 @@
 
 
 <script src="core/scripts/receptFormHandler.js" defer></script>
+%!SCRIPT!%
