--- a/template/mainSearch.html
+++ b/template/mainSearch.html
@@ -7,14 +7,11 @@
                     <input class="form-control" name="query" placeholder="Keresés..." id="search">
                 </div>
                 <div class="col-sm-2">
-                    <input type="submit" class="form-control btn btn-default" name="search"
+                    <input type="submit" class="form-control btn btn-default" name="search" id="search-btn"
                         value="Keresés...">
                 </div>
             </div>
         </div>
-        <p class="text-center mt-2"><span id="recept-num">%!ALLRECEPT!%</span> recept...</p>
+        <p class="text-center mt-2"><span id="recept-num">%!RESULT!%</p>
     </form>
 </div>
-
-
-%!RESULT!%
