--- a/template/foodCategories.html
+++ b/template/foodCategories.html
@@ -1,49 +1,51 @@
 <optgroup label="Főételek">
-    <option value="levesek">Levesek</option>
-    <option value="eloetelek">Előételek</option>
-    <option value="foetelek">Főételek</option>
-    <option value="koretek">Köretek</option>
-    <option value="tesztak">Tészták</option>
-    <option value="rakottetelek">Rakott ételek</option>
-    <option value="grilletelek">Grill ételek</option>
-    <option value="vegetarianus">Vegetáriánus ételek</option>
-    <option value="vegan">Vegán ételek</option>
-    <option value="haletelek">Halételek</option>
-    <option value="husetel">Húsételek</option>
-    <option value="streetfood">Street food</option>
-  </optgroup>
-  <optgroup label="Édességek">
-    <option value="sutemenyek">Sütemények</option>
-    <option value="tortak">Torták</option>
-    <option value="pohardesszertek">Pohárdesszertek</option>
-    <option value="kekszek">Kekszek</option>
-    <option value="palacsintak">Palacsinták és gofrik</option>
-    <option value="pitek">Piték</option>
-    <option value="fagyik">Fagyik és jégkrémek</option>
-    <option value="suttnelkul">Édességek sütés nélkül</option>
-    <option value="dietasedessegek">Diétás édességek</option>
-  </optgroup>
-  <optgroup label="Speciális">
-    <option value="gyors">Gyors ételek (30 perc alatt)</option>
-    <option value="egeszseges">Egészséges receptek</option>
-    <option value="alacsonykal">Alacsony kalóriás ételek</option>
-    <option value="glutenmentes">Gluténmentes ételek</option>
-    <option value="laktozmentes">Laktózmentes ételek</option>
-    <option value="unnepi">Ünnepi ételek</option>
-    <option value="nemzetkozi">Nemzetközi konyhák</option>
-  </optgroup>
-  <optgroup label="Italok">
-    <option value="smoothiek">Smoothiek</option>
-    <option value="koktelok">Koktélok</option>
-    <option value="alkoholmentes">Alkoholmentes italok</option>
-    <option value="forroitalok">Forró italok</option>
-  </optgroup>
-  <optgroup label="Egyéb">
-    <option value="befottek">Befőttek és savanyúságok</option>
-    <option value="szoszok">Szószok és mártások</option>
-    <option value="kenyerek">Kenyerek és péksütemények</option>
-    <option value="szendvicsek">Szendvicsek</option>
-    <option value="salatak">Saláták</option>
-    <option value="gyermekbarat">Gyermekbarát receptek</option>
-    <option value="piknik">Piknik ételek</option>
-  </optgroup>
+  <option value="leves">Leves</option>
+  <option value="előétel">Előétel</option>
+  <option value="főétel">Főétel</option>
+  <option value="köret">Köret</option>
+  <option value="tészta">Tészta</option>
+  <option value="rakott étel">Rakott étel</option>
+  <option value="grill">Grill étel</option>
+  <option value="vegetáriánus">Vegetáriánus étel</option>
+  <option value="vegán">Vegán étel</option>
+  <option value="halétel">Halétel</option>
+  <option value="húsétel">Húsétel</option>
+  <option value="street food">Street food</option>
+</optgroup>
+<optgroup label="Édesség">
+  <option value="sütemény">Sütemény</option>
+  <option value="torta">Torta</option>
+  <option value="pohár desszert">Pohárdesszert</option>
+  <option value="keksz">Keksz</option>
+  <option value="palacsinta & gofri">Palacsinta és gofri</option>
+  <option value="pite">Pite</option>
+  <option value="fagyi & jégkrém">Fagyi és jégkrém</option>
+  <option value="sütés nélküli édesség">Édesség sütés nélkül</option>
+  <option value="diétás édesség">Diétás édesség</option>
+</optgroup>
+<optgroup label="Speciális">
+  <option value="gyors">Gyors étel (30 perc alatt)</option>
+  <option value="egészséges">Egészséges recept</option>
+  <option value="alacsony kalória">Alacsony kalóriás étel</option>
+  <option value="gluténmentes">Gluténmentes étel</option>
+  <option value="laktózmentes">Laktózmentes étel</option>
+  <option value="ünnepi">Ünnepi étel</option>
+  <option value="nemzetközi">Nemzetközi konyha</option>
+</optgroup>
+<optgroup label="Italok">
+  <option value="Smoothie">Smoothie</option>
+  <option value="koktél">Koktél</option>
+  <option value="alkoholmentes">Alkoholmentes ital</option>
+  <option value="forró ital">Forró ital</option>
+</optgroup>
+<optgroup label="Egyéb">
+  <option value="befőtt">Befőttek és savanyúság</option>
+  <option value="szósz">Szószok és mártás</option>
+  <option value="kenyér">Kenyerek és péksütemény</option>
+  <option value="szendvics">Szendvics</option>
+  <option value="saláta">Saláta</option>
+  <option value="gyermekbarát">Gyermekbarát recept</option>
+  <option value="piknik">Piknik étel</option>
+<optgroup label="">
+  <option value="egyéb">Egyéb étel</option>
+</optgroup>
