--- a/template/recept-card.html
+++ b/template/recept-card.html
@@ -1,12 +1,12 @@
 <div class="card-deck col-lg-4 col-md-6 mb-5 shadow rounded" id="%!RECEPTID!%">
     <div class="card">
-        <a href="%!RECEPTLINK!%">
+        <a href="#">
             <img class="card-img-top"
                 src="%!RECEPTKEP!%"
                 alt="recept kep">
         </a>
         <div class="card-body mt-2">
-            <h5 class="card-title"><a href="#">%!RECEPTNEV!%</a></h5>
+            <h5 class="card-title"><a href="%!RECEPTLINK!%">%!RECEPTNEV!%</a></h5>
             <ul class="card-list">
                 <li class="card-text">
                     <small class="text-muted"><span>%!IDO!%</span> perc | </small>
