--- a/template/register.html
+++ b/template/register.html
@@ -2,7 +2,7 @@
 <div class="container d-flex justify-content-center align-items-center vh-100" id="register-box">
     <div class="card p-4 shadow-lg" style="width: 100%; max-width: 500px;">
         <h3 class="text-center mb-4">Regisztráció</h3>
-        <form method="post">
+        <form method="post" enctype="multipart/form-data">
             <div class="mb-3">
                 <label for="vezNev" class="form-label">Vezetéknév</label>
                 <input type="text" class="form-control" id="vezNev" name="vezNev" placeholder="Vezetékneved" required>
@@ -26,7 +26,7 @@
             </div>
             <div class="mb-3">
                 <label for="profilePicture" class="form-label">Profilkép feltöltése</label>
-                <input type="file" class="form-control" id="profilePicture" name="profilePic" accept="image/*">
+                <input type="file" class="form-control" id="profilePicture" name="img" accept="%!ACCEPT!%">
             </div>
             <div class="custom-control custom-checkbox text-center mt-4">
                 <input type="checkbox" class="custom-control-input" id="customCheck1" required>
