--- a/template/account-page.html
+++ b/template/account-page.html
@@ -4,7 +4,7 @@
             <div class="profil-adatok">
                 <h3>Profiom</h3>
                 <div class="text-center mt-4">
-                    <img class="profil-pic rounded" src="%!SRC!%" alt="profil kep">
+                    <img class="profil-pic" src="%!SRC!%" alt="profil kep">
                     <p class="my-3"><b>%!NAME!%</b></p>
                     <p class="my-3 small">%!EMAIL!%</p>
                     <p class="my-3">%!RECEPTSZAM!% feltöltött recept</p>
