--- a/core/css/style.css
+++ b/core/css/style.css
@@ -177,8 +177,28 @@ footer {
     min-height: 378px;
 }
 
+.card-deck{
+    padding: 0px;
+}
+
+.card-img-wrapper{
+    width: 100%;
+    height: 150px;
+    overflow: hidden;
+}
+
 .card-img-top {
-    min-height: 150px;
+    width: 100%;
+}
+
+.nev-wrapper{
+    width: 100%;
+    height: 22px;
+    overflow: hidden;
+}
+
+.nev-wrapper h5{
+    font-size: 18px;
 }
 
 .card-title a {
