--- a/template/recept-card.html
+++ b/template/recept-card.html
@@ -1,28 +1,32 @@
-<div class="card-deck col-lg-4 col-md-6 mb-5 shadow rounded" id="%!RECEPTID!%">
-    <div class="card">
-        <a href="#">
-            <img class="card-img-top"
-                src="%!RECEPTKEP!%"
-                alt="recept kep">
-        </a>
-        <div class="card-body mt-2">
-            <h5 class="card-title"><a href="%!RECEPTLINK!%">%!RECEPTNEV!%</a></h5>
-            <ul class="card-list">
-                <li class="card-text">
-                    <small class="text-muted"><span>%!IDO!%</span> perc | </small>
-                </li>
-                <li class="card-text">
-                    <small class="text-muted"><span>%!ADAG!%</span> adag | </small>
-                </li>
-                <li class="card-text">
-                    <small class="text-muted">%!NEHEZSEG!%</small>
-                </li>
-            </ul>
-            <p class="card-text text-center mb-1"><small><span>%!USER!%</span> receptje</small></p>
-            <p class="card-text text-center mb-0 text-muted"><small>Értékelés <span>%!SCORE!%</span></small>
-            </p>
-            <div class="star text-center mb-1">
-                <img class="star-image" src="%!STARSKEP!%" alt="stars">
+<div class=" col-lg-4 col-md-6 mb-5">
+    <div class="card-deck shadow rounded" id="%!RECEPTID!%">
+        <div class="card">
+            <a href="#">
+                <div class="card-img-wrapper">
+                    <img class="card-img-top"
+                        src="%!RECEPTKEP!%"
+                        alt="recept kep">
+                </div>
+            </a>
+            <div class="card-body mt-2">
+                <div class="nev-wrapper"><h5 class="card-title"><a href="%!RECEPTLINK!%">%!RECEPTNEV!%</a></h5></div>
+                <ul class="card-list mt-1">
+                    <li class="card-text">
+                        <small class="text-muted"><span>%!IDO!%</span> perc | </small>
+                    </li>
+                    <li class="card-text">
+                        <small class="text-muted"><span>%!ADAG!%</span> adag | </small>
+                    </li>
+                    <li class="card-text">
+                        <small class="text-muted">%!NEHEZSEG!%</small>
+                    </li>
+                </ul>
+                <p class="card-text text-center mb-1"><small><span>%!USER!%</span> receptje</small></p>
+                <p class="card-text text-center mb-0 text-muted"><small>Értékelés <span>%!SCORE!%</span></small>
+                </p>
+                <div class="star text-center mb-1">
+                    <img class="star-image" src="%!STARSKEP!%" alt="stars">
+                </div>
             </div>
         </div>
     </div>
