--- a/template/recept-feltoltes.html
+++ b/template/recept-feltoltes.html
@@ -62,28 +62,28 @@
                     <div class="col-md-4">
                         <label for="ingredientName1" class="form-label">Hozzávaló neve</label>
                         <input type="text" class="form-control input-filed" id="ingredientName1"
-                            name="ingredients[0][name]" placeholder="pl. cukor.." required>
+                            name="ingredients[0][nev]" placeholder="pl. cukor.." required>
                     </div>
                     <div class="col-md-3">
                         <label for="ingredientAmount1" class="form-label">Mennyiség</label>
                         <input type="number" class="form-control input-filed" id="ingredientAmount1"
-                            name="ingredients[0][amount]" placeholder="pl. 100.." required>
+                            name="ingredients[0][mennyiseg]" placeholder="pl. 100.." required>
                     </div>
                     <div class="col-md-3">
                         <label for="ingredientUnit1" class="form-label">Mértékegység</label>
-                        <select class="form-select" id="ingredientUnit1" name="ingredients[0][unit]">
-                            <option value="grams">gramm</option>
-                            <option value="pieces">dkg</option>
+                        <select class="form-select" id="ingredientUnit1" name="ingredients[0][mertekegyseg]">
+                            <option value="gramm">gramm</option>
+                            <option value="dkg">dkg</option>
                             <option value="ml">ml</option>
                             <option value="liter">liter</option>
                             <option value="db">db</option>
                             <option value="ek">ek</option>
                             <option value="tk">tk</option>
-                            <option value="bogre">bögre</option>
+                            <option value="bögre">bögre</option>
                             <option value="csomag">csomag</option>
                             <option value="csipet">csipet</option>
                             <option value="csokor">csokor</option>
-                            <option value="csesze">csésze</option>
+                            <option value="csésze">csésze</option>
                             <option value="szelet">szelet</option>
                         </select>
                     </div>
