--- a/template/recept-feltoltes.html
+++ b/template/recept-feltoltes.html
@@ -74,6 +74,8 @@
                         <select class="form-select" id="ingredientUnit1" name="ingredients[0][mertekegyseg]">
                             <option value="gramm">gramm</option>
                             <option value="dkg">dkg</option>
+                            <option value="kg">kg</option>
+                            <option value="dl">dl</option>
                             <option value="ml">ml</option>
                             <option value="liter">liter</option>
                             <option value="db">db</option>
@@ -85,6 +87,8 @@
                             <option value="csokor">csokor</option>
                             <option value="csésze">csésze</option>
                             <option value="szelet">szelet</option>
+                            <option value="gerezd">gerezd</option>
+                            <option value="szál">szál</option>
                         </select>
                     </div>
                     <div class="col-md-2">
