--- a/template/receptek.html
+++ b/template/receptek.html
@@ -86,12 +86,12 @@
 
 
             </div>
-
+            <p class="text-center">%!PAGES!%</p>
         </div>
 
     </div>
 
-    <div id="results"></div>
+
 
 </div>
 
