--- a/template/recept-card.html
+++ b/template/recept-card.html
@@ -1,7 +1,7 @@
 <div class=" col-lg-4 col-md-6 mb-5">
     <div class="card-deck shadow rounded" id="%!RECEPTID!%">
         <div class="card">
-            <a href="#">
+            <a href="%!RECEPTLINK!%">
                 <div class="card-img-wrapper">
                     <img class="card-img-top"
                         src="%!RECEPTKEP!%"
