--- a/template/recept-datasheet.html
+++ b/template/recept-datasheet.html
@@ -36,11 +36,13 @@
             <div class="ingredients">
                 <h3 class="my-5" style="margin-left: 20px">Hozzávalók</h3>
                 <ul>
-                    <li>2L <span class="list-element">tej</span></li>
-                    <li>120g <span class="list-element">cukor</span></li>
-                    <li>5dl <span class="list-element">víz</span></li>
-                    <li>3 szelet <span class="list-element">sajt</span></li>
-                    <li>2 ek <span class="list-element">tejöl</span></li>
+
+                    
+
+                    %!HOZZAVALOK!%
+
+
+
                 </ul>
             </div>
 
@@ -49,27 +51,14 @@
             <div class="description my-3">
                 <h3 class="my-5 ml-2" style="margin-left: 20px">Elkészítés</h3>
 
-                <ol>
-                    <li>
-                        A baconszeletekkel béleljük ki az őzgerincformát úgy, hogy a szeletek kissé fedjék egymást,
-                        és a végeik kilógjanak a forma szélén, hogy a végén be tudjuk hajtani.
-                    </li>
-                    <li>
-                        A baconszeletekkel béleljük ki az őzgerincformát úgy, hogy a szeletek kissé fedjék egymást,
-                        és a végeik kilógjanak a forma szélén, hogy a végén be tudjuk hajtani.
-                    </li>
-                    <li>
-                        A csirkemelleket vágjuk kisebb, 2 cm-es csíkokra vagy kockákra. Sózzuk, borsozzuk ízlés
-                        szerint. A petrezselymet aprítsuk finomra.
 
-                    </li>
-                    <li>
-                        Egy tálban keverjük össze a tejfölt vagy habtejszínt, a tojásokat, a reszelt sajtot, a
-                        zúzott fokhagymát, a mustárt, és ha szeretnénk egy kis lisztet a sűrűség kedvéért. Adjuk
-                        hozzá a finomra vágott petrezselymet is, keverjük össze.
 
-                    </li>
-                </ol>
+
+                %!LEIRAS!%
+
+
+
+
             </div>
 
             <div class="devider"></div>
