--- a/template/comment-thumbnail.html
+++ b/template/comment-thumbnail.html
@@ -1,13 +1,13 @@
 <div class="review-thumb">
     <div class="row">
-        <div class="col-3">
+        <div class="col-sm-3">
             <div class="text-center">
-                <img id="user-pic" class="rounded" src="%!KOMMENTERPIC!%" alt="user-pic"><br>
+                <img id="user-pic" src="%!KOMMENTERPIC!%" alt="user-pic"><br>
                 <p id="user-name" class="mb-0">%!KOMMENTERNAME!%</p>
                 <small id="time-stamp" class="">%!TIMESTAMP!%</small>
             </div>
         </div>
-        <div class="col-9">
+        <div class="col-sm-9 mt-2">
             <div class="mx-3">
                 <img id="review-star" src="%!RATINGPIC!%" alt="stars">
                 <p class="comment-text">%!KOMMENT!%</p>
