--- a/template/recept-datasheet.html
+++ b/template/recept-datasheet.html
@@ -33,11 +33,11 @@
                     alt="recept képe">
             </div>
 
-            <div class="ingredients">
+            <div class="ingredients mx-5">
                 <h3 class="my-5" style="margin-left: 20px">Hozzávalók</h3>
                 <ul>
 
-                    
+
 
                     %!HOZZAVALOK!%
 
@@ -48,13 +48,13 @@
 
             <div class="devider"></div>
 
-            <div class="description my-3">
-                <h3 class="my-5 ml-2" style="margin-left: 20px">Elkészítés</h3>
+            <div class="description my-3 mx-5">
+                <h3 class="my-5">Elkészítés</h3>
 
 
 
 
-                %!LEIRAS!%
+                <p class="mb-5 leiras">%!LEIRAS!%</p>
 
 
 
@@ -69,6 +69,8 @@
 
             <div class="recept-reviews mt-3">
                 <h3 class="text-center" id="comments">Hozzászólások</h3>
+
+
 
                 %!KOMMENTEK!%
 
