--- a/template/account-page.html
+++ b/template/account-page.html
@@ -17,7 +17,7 @@
             </div>
         </div>
         <div class="col-md-9">
-            <div class="profil-receptek white">
+            <div class="profil-receptek white" style="min-height: 800px;">
                 <div class="cover-pic">
                     <h2>Receptjeim</h2>
                     <img src="%!COVERIMG!%" alt="cover-pic" class="img-fluid">
