--- a/core/css/style.css
+++ b/core/css/style.css
@@ -319,29 +319,7 @@ footer {
     font-size: 18px;
 }
 
-/*
-.description ol {
-    list-style: none;
-    counter-reset: item;
-    line-height: 2rem;
-}
 
-.description li {
-    counter-increment: item;
-    margin-bottom: 15px;
-}
-
-.description li:before {
-    margin-right: 10px;
-    content: counter(item);
-    background: var(--primary-color);
-    border-radius: 100%;
-    color: white;
-    width: 35px;
-    text-align: center;
-    display: inline-block;
-}
-/*
 
 /*   hasonló receptek side section   */
 
@@ -383,7 +361,7 @@ footer {
     margin: 10px auto;
 }
 
-.review-thumb #user-pic{
+.review-thumb .user-pic{
     width: 80px;
     text-align: center;
     margin-left: auto;
@@ -391,14 +369,18 @@ footer {
     border-radius: 50%;
 }
 
-#review-star{
+.review-star{
     width: 100px;
-    margin-bottom: 15px;
+    margin: 10px 0 15px 0;
 }
 
 .comment-text{
     font-size: 14px;
     line-height: 1.3rem;
+}
+
+.time-stamp{
+    color: rbga(0,0,0,0.2) !important;
 }
 
 .write-review{
@@ -436,6 +418,22 @@ footer {
 
 .write-review .star:hover{
     opacity: .5;
+}
+
+.review-delete-btn{
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    margin-right: 10px;
+}
+
+.review-delete-btn button{
+    font-size: 12px;
+}
+
+.review-delete-btn button:hover{
+    background-color: red;
+    color: white;
 }
 
 /*              recept slider         */
