--- a/template/comment-thumbnail.html
+++ b/template/comment-thumbnail.html
@@ -2,17 +2,23 @@
     <div class="row">
         <div class="col-sm-3">
             <div class="text-center">
-                <img id="user-pic" src="%!KOMMENTERPIC!%" alt="user-pic"><br>
-                <p id="user-name" class="mb-0">%!KOMMENTERNAME!%</p>
-                <small id="time-stamp" class="">%!TIMESTAMP!%</small>
+                <img class="user-pic" src="%!KOMMENTERPIC!%" alt="user-pic"><br>
+                <p class="user-name" class="mb-0">%!KOMMENTERNAME!%</p>
             </div>
         </div>
         <div class="col-sm-9 mt-2">
+            <!--
+            <div class="review-delete-btn">
+                <button id="rev-del-btn" type="submit" class="btn btn-outline-danger">törlés</button>
+            </div>
+            -->
             <div class="mx-3">
-                <img id="review-star" src="%!RATINGPIC!%" alt="stars">
+                <small class="time-stamp">%!TIMESTAMP!%</small><br>
+                <img class="review-star" src="%!RATINGPIC!%" alt="stars" class="mt-2">
                 <p class="comment-text">%!KOMMENT!%</p>
             </div>
         </div>
+
     </div>
     <div class="devider-small"></div>
 </div>
