--- a/template/star-recept-module.html
+++ b/template/star-recept-module.html
@@ -3,7 +3,7 @@
         <div class="row white">
             <div class="col-md-7 p-0">
                 <div class="wrap">
-                    <img src="%!RECEPTKEP!%" alt="recept képe" id="star-recept-kep">
+                    <a href="%!LINK!%"><img src="%!RECEPTKEP!%" alt="recept képe" class="star-recept-kep"></a>
                 </div>
             </div>
             <div class="col-md-5 white star-flex">
