--- a/template/recepies-slider.html
+++ b/template/recepies-slider.html
@@ -4,90 +4,8 @@
     <div class="flex">
 
 
-        <div class="small-deck" id="receptID">
-                <a href="#">
-                    <img class="card-img-top rounded"
-                        src="https://cdn.mindmegette.hu/2024/04/cNfIfBYPwpvl1tAzwvSqehQ4nF42_Gm7adWhewfYfrI/fill/0/0/no/1/aHR0cHM6Ly9jbXNjZG4uYXBwLmNvbnRlbnQucHJpdmF0ZS9jb250ZW50L2FiNzg4Y2RjNGVmNzQwOGFiMzQ1NWRhZTFkNjc0NmQ0.jpg"
-                        alt="recept kep">
-                </a>
-                <div class="mt-2 text-center">
-                    <h5 class="card-title"><a href="#">Recept neve</a></h5>
-                    <ul class="card-list mt-4">
-                        <li class="card-text">
-                            <small class="text-muted">85 perc | </small>
-                        </li>
-                        <li class="card-text">
-                            <small class="text-muted">6 adag | </small>
-                        </li>
-                        <li class="card-text">
-                            <small class="text-muted">könnyű</small>
-                        </li>
-                    </ul>
-                </div>
-        </div>
-        <div class="small-deck" id="receptID">
-                <a href="#">
-                    <img class="card-img-top"
-                        src="https://cdn.mindmegette.hu/2024/04/cNfIfBYPwpvl1tAzwvSqehQ4nF42_Gm7adWhewfYfrI/fill/0/0/no/1/aHR0cHM6Ly9jbXNjZG4uYXBwLmNvbnRlbnQucHJpdmF0ZS9jb250ZW50L2FiNzg4Y2RjNGVmNzQwOGFiMzQ1NWRhZTFkNjc0NmQ0.jpg"
-                        alt="recept kep">
-                </a>
-                <div class="mt-2 text-center">
-                    <h5 class="card-title"><a href="#">Recept neve</a></h5>
-                    <ul class="card-list mt-4">
-                        <li class="card-text">
-                            <small class="text-muted">85 perc | </small>
-                        </li>
-                        <li class="card-text">
-                            <small class="text-muted">6 adag | </small>
-                        </li>
-                        <li class="card-text">
-                            <small class="text-muted">könnyű</small>
-                        </li>
-                    </ul>
-                </div>
-        </div>
-        <div class="small-deck" id="receptID">
-                <a href="#">
-                    <img class="card-img-top"
-                        src="https://cdn.mindmegette.hu/2024/04/cNfIfBYPwpvl1tAzwvSqehQ4nF42_Gm7adWhewfYfrI/fill/0/0/no/1/aHR0cHM6Ly9jbXNjZG4uYXBwLmNvbnRlbnQucHJpdmF0ZS9jb250ZW50L2FiNzg4Y2RjNGVmNzQwOGFiMzQ1NWRhZTFkNjc0NmQ0.jpg"
-                        alt="recept kep">
-                </a>
-                <div class="mt-2 text-center">
-                    <h5 class="card-title"><a href="#">Recept neve</a></h5>
-                    <ul class="card-list mt-4">
-                        <li class="card-text">
-                            <small class="text-muted">85 perc | </small>
-                        </li>
-                        <li class="card-text">
-                            <small class="text-muted">6 adag | </small>
-                        </li>
-                        <li class="card-text">
-                            <small class="text-muted">könnyű</small>
-                        </li>
-                    </ul>
-                </div>
-        </div>
-        <div class="small-deck" id="receptID">
-                <a href="#">
-                    <img class="card-img-top"
-                        src="https://cdn.mindmegette.hu/2024/04/cNfIfBYPwpvl1tAzwvSqehQ4nF42_Gm7adWhewfYfrI/fill/0/0/no/1/aHR0cHM6Ly9jbXNjZG4uYXBwLmNvbnRlbnQucHJpdmF0ZS9jb250ZW50L2FiNzg4Y2RjNGVmNzQwOGFiMzQ1NWRhZTFkNjc0NmQ0.jpg"
-                        alt="recept kep">
-                </a>
-                <div class="mt-2 text-center">
-                    <h5 class="card-title"><a href="#">Recept neve</a></h5>
-                    <ul class="card-list mt-4">
-                        <li class="card-text">
-                            <small class="text-muted">85 perc | </small>
-                        </li>
-                        <li class="card-text">
-                            <small class="text-muted">6 adag | </small>
-                        </li>
-                        <li class="card-text">
-                            <small class="text-muted">könnyű</small>
-                        </li>
-                    </ul>
-                </div>
-        </div>
+        %!RECEPIES!%
+
         
         
     </div>
