--- a/template/slider-recepie-card.html
+++ b/template/slider-recepie-card.html
@@ -1,9 +1,9 @@
-<div class="small-deck" id="receptID">
-    <a href="%!LINK!%">
-        <img class="card-img-top rounded"
-            src="%!KEP!%"
-            alt="recept kep">
-    </a>
+<div class="small-deck">
+    <div class="img-wrapper">
+        <a href="%!LINK!%">
+        <img class="card-img-top" src="%!KEP!%" alt="recept kep">
+        </a>
+    </div>
     <div class="mt-2 text-center">
         <h5 class="card-title">%!NEV!%</h5>
         <ul class="card-list mt-4">
@@ -17,6 +17,6 @@
                 <small class="text-muted">%!NEHEZSEG!%</small>
             </li>
         </ul>
-        <a class="btn btn-default" href="%!LINK!%" >megnézem</a>
+        <a class="btn btn-default" href="%!LINK!%">megnézem</a>
     </div>
 </div>
