--- a/core/css/style.css
+++ b/core/css/style.css
@@ -51,6 +51,16 @@ a {
     opacity: 80%;
 }
 
+.btn-default-outline {
+    background-color: transparent;
+    color: var(--primary-color);
+    border: 1px solid var(--primary-color);
+}
+
+.btn-default-outline:hover {
+    opacity: 80%;
+}
+
 .blokk{
     background-color: white;
 }
@@ -463,6 +473,16 @@ margin: auto;
     background-color: white;
 }
 
+.img-wrapper{
+    width: 100%;
+    height: 130px;
+    overflow: hidden;
+}
+
+.img-wrapper img{
+    width: 100%;
+}
+
 /*              Profil page         */
 
 .cover-pic{
@@ -485,10 +505,6 @@ margin: auto;
     width: 80%;
     max-width: 200px;
     border-radius: 50% !important;
-}
-
-.profil-adatok{
-
 }
 
 
