--- a/template/user-recept-card.html
+++ b/template/user-recept-card.html
@@ -29,8 +29,8 @@
             </div>
     
             <div class="actions text-center mt-2">
-                <a href="#" id="edit-recept">Módosítás</a>
-                <a href="#" id="delete-recept">törlés</a>
+                <a href="#" class="edit-recept">Módosítás</a>
+                <a href="#" class="delete-recept" onclick="deleteRecepie(%!RECEPTID!%)">törlés</a>
             </div>
         </div>
     </div>
