--- a/template/navItemLogin.html
+++ b/template/navItemLogin.html
@@ -13,6 +13,7 @@
         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
             <li><a class="dropdown-item" href="index.php?p=account">Receptjeim</a></li>
             <li><a class="dropdown-item" href="index.php?p=account">Profilom</a></li>
+            %!ADMIN!%
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="index.php?logout=true" style="color: red;">Kijelentkezés</a></li>
         </ul>
