--- a/template/permission_denied.html
+++ b/template/permission_denied.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>TODO supply a title</title>
+    <title>Permission denied!</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -23,6 +23,7 @@
         <img src="content/Logo.png" alt="logo" style="width: 200px;" class="mb-4">
         <div class="text-center">
             <h1>%!CONTENT!%</h1>
+            <a href="index.php" class="py-3">vissza a főoldalra ></a>
         </div>
     </div>
     </div>
