--- a/template/admin.html
+++ b/template/admin.html
@@ -9,7 +9,10 @@
     <link rel="stylesheet" href="core/css/admin-style.css">
 </head>
 <body>
-    <div>%!CONTENT!%</div>
+    <div class="row">
+        <div id="admin-nav-section" class="col-2">%!NAVIGATION!%</div>
+        <div id="admin-body-section" class="col-10">%!CONTENT!%</div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
