--- a/template/admin-navigation.html
+++ b/template/admin-navigation.html
@@ -20,9 +20,15 @@
                 <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">Keresési előzmények</span>
             </a>
         </li>
+
+        <li class="nav-item">
+            <a href="index.php?p=users" class="nav-link align-middle px-0">
+                <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">Felhasználók</span>
+            </a>
+        </li>
         
         <li>
-            <a href="index.php" class="nav-link px-0 align-middle">
+            <a href="index.php" class="nav-link px-0 align-bottom">
                 <i class="fs-4 bi-table"></i> <span class="ms-1 d-none d-sm-inline">Vissza a főoldalra</span></a>
         </li>
         
