--- a/template/search-log.html
+++ b/template/search-log.html
@@ -1,1 +1,12 @@
 <h3>Keresési előzmények:</h3>
+<table id="search-table" class="table table-sm table-dark table-stripped">
+    <thead>
+        <tr>
+            <th>Időpont</th>
+            <th>keresett kifejezés</th>
+        </tr>
+    </thead>
+    <tbody>
+        %!KERESESEK!%
+    </tbody>
+</table>
