--- a/template/admin-navigation.html
+++ b/template/admin-navigation.html
@@ -29,7 +29,7 @@
         
         <li>
             <a href="index.php" class="nav-link px-0 align-bottom">
-                <i class="fs-4 bi-table"></i> <span class="ms-1 d-none d-sm-inline">Vissza a főoldalra</span></a>
+                <i class="fs-4 bi-table"></i> <span class="ms-1 d-none d-sm-inline" style="color: white;"><b>Vissza a főoldalra</b></span></a>
         </li>
         
     </ul>
