--- a/template/user-recept-card.html
+++ b/template/user-recept-card.html
@@ -29,8 +29,9 @@
             </div>
     
             <div class="actions text-center mt-2">
-                <a href="#" class="edit-recept">Módosítás</a>
+                <form method="post">
                 <a href="#" class="delete-recept" onclick="deleteRecepie(%!RECEPTID!%)">törlés</a>
+                </form>
             </div>
         </div>
     </div>
