admin users handling

--- a/template/search-log.html
+++ b/template/search-log.html
@@ -1,5 +1,5 @@
 <h3>Keresési előzmények:</h3>
-<table id="search-table" class="table table-sm table-dark table-stripped">
+<table id="search-table" class="table table-sm table-dark table-striped">
     <thead>
         <tr>
             <th>Időpont</th>
