--- a/template/admin_home.html
+++ b/template/admin_home.html
@@ -1,1 +1,4 @@
-<h1 class="m-5 p-5" id="admin-welcome-text">Üdv az Admin oldalon!</h1>
+<div class="m-5 p-5">
+    <h1 id="admin-welcome-text">Üdv az Admin oldalon!</h1>
+    <h2>Itt tudod szerkeszteni a weboldal tartalmait....</h2>
+</div>
