--- a/template/admin-navigation.html
+++ b/template/admin-navigation.html
@@ -28,7 +28,7 @@
         </li>
         
         <li>
-            <a href="index.php" class="nav-link px-0 align-bottom">
+            <a href="index.php" class="nav-link px-0" id="back-to-hp">
                 <i class="fs-4 bi-table"></i> <span class="ms-1 d-none d-sm-inline" style="color: white;"><b>Vissza a főoldalra</b></span></a>
         </li>
         
