--- a/template/edit-text.html
+++ b/template/edit-text.html
@@ -1,1 +1,13 @@
-<h3>Szövegek szerkesztése</h3>
+<h3>Contentek szerkesztése</h3>
+<h5 style="background-color: %!COLOR!%; color: white" class="w-100 p-2">%!RESULT!%</h5>
+<table class="table table-dark table-striped" id="content-table">
+    <thead>
+        <tr>
+            <th>Flag</th>
+            <th>Content</th>
+        </tr>
+    </thead>
+    <tbody>
+        %!ROWS!%
+    </tbody>
+</table>
