--- a/template/content-row.html
+++ b/template/content-row.html
@@ -2,9 +2,9 @@
     <td>
         %!FLAG!%
     </td>
-    <td class="textarea-td">
+    <td class="textarea-td" style="max-width: 300px; text-align: left ;">
         <form method="post">
-            <textarea class="" name="content" rows="4" cols="50">%!CONTENT!%</textarea>
+            <textarea class="" name="content" rows="4" cols="80">%!CONTENT!%</textarea>
             <input type="hidden" name="flag" value="%!FLAG!%">
             <input type="submit" name="edit" value="módosít" class="btn btn-primary mb-4 mx-2">
         </form> 
