--- a/template/edit-text.html
+++ b/template/edit-text.html
@@ -1,6 +1,6 @@
 <h3>Contentek szerkesztése</h3>
 <h5 style="background-color: %!COLOR!%; color: white" class="w-100 p-2">%!RESULT!%</h5>
-<table class="table table-dark table-striped" id="content-table">
+<table class="table table-dark table-striped" id="content-table"  style="width: 80%;">
     <thead>
         <tr>
             <th>Flag</th>
