--- a/template/register.html
+++ b/template/register.html
@@ -44,17 +44,4 @@
 </div>
 %!SCRIPT!%
 
-<script>
-    document.getElementById("password-check").addEventListener("change", () => {
-        if (document.getElementById("password-check").value !== document.getElementById("password").value) {
-            document.getElementById("password-check").value = "";
-            document.getElementById("password-check").style.backgroundColor = "rgba(255,0,0,.2)";
-            //document.getElementById("password").value = "";
-            alert("A két jelszó nem egyezik meg!");
-        }
-        else {
-            document.getElementById("password").style.backgroundColor = "rgba(0,255,0,.1)";
-            document.getElementById("password-check").style.backgroundColor = "rgba(0,255,0,.1)";
-        }
-    });
-</script>
+<script src="core/scripts/register.js"></script>
