--- a/template/mainSearch.html
+++ b/template/mainSearch.html
@@ -4,11 +4,11 @@
         <div class="container" style="max-width: 800px;">
             <div class="row">
                 <div class="col-sm-10">
-                    <input class="form-control" name="query" placeholder="Keresés..." id="search">
+                    <input class="form-control" name="query" placeholder="%!PLACEHOLDER!%" id="search" value="%!PLACEHOLDER!%">
                 </div>
                 <div class="col-sm-2">
                     <input type="submit" class="form-control btn btn-default" name="search" id="search-btn"
-                        value="Keresés...">
+                        value="Keresés">
                 </div>
             </div>
         </div>
