--- a/template/users.html
+++ b/template/users.html
@@ -8,7 +8,7 @@
         <form id="editForm" method="post">
             <input type="hidden" id="editUserId">
             <div class="form-group">
-                <label for="userName">Name:</label>
+                <label for="userName">Név:</label>
                 <input class="form-control" type="text" id="userName">
             </div>
             <div class="form-group">
@@ -17,7 +17,7 @@
             </div>
             <div class="form-group">
                 <label for="groupMem">Group Member:</label>
-                <input class="form-control" type="numnber" id="groupMem">
+                <input class="form-control" type="number" min="0" id="groupMem">
             </div>
             <div class="my-3">
                 <button type="submit" id="saveChanges" class="btn btn-success" name="editUser">Save</button>
