--- a/template/navigation.html
+++ b/template/navigation.html
@@ -3,7 +3,7 @@
     <a class="navbar-brand" href="index.php"><img src="%!LOGO!%" alt="receptkönyv logó" id="logo"></a>
     <a class="nav-item nav-link" href="index.php"><li>Főoldal</li></a>
     <a class="nav-item nav-link" href="index.php?p=receptek"><li>Receptek</li></a>
-    <a class="nav-item nav-link" id="nav-categories" href="#"><li>Kategóriák</li></a>
+    <a class="nav-item nav-link" id="nav-categories" href="index.php?p=about"><li>Rólunk</li></a>
         %!NAVITEMUPLOAD!%
         %!NAVITEMLOGIN!%
 </ul>
