--- a/template/write-review-block.html
+++ b/template/write-review-block.html
@@ -15,6 +15,6 @@
         <textarea class="form-control mt-3" id="review-area" rows="4" name="review"
             placeholder="Hozzászólás írása..."></textarea>
 
-        <button type="submit" id="submit-button" class="btn btn-primary mt-3 disabled" name="UserReview">Hozzászólok</button>
+        <button type="submit" id="submit-button" class="btn btn-default mt-3 disabled w-100" name="UserReview">Hozzászólok</button>
     </form>
 </div>
