--- a/template/mainSearch.html
+++ b/template/mainSearch.html
@@ -4,7 +4,7 @@
         <div class="container" style="max-width: 800px;">
             <div class="row">
                 <div class="col-sm-10">
-                    <input class="form-control" name="query" placeholder="%!PLACEHOLDER!%" id="search" value="%!PLACEHOLDER!%">
+                    <input class="form-control" name="query" placeholder="%!PLACEHOLDER!%" id="search" value="%!VALUE!%">
                 </div>
                 <div class="col-sm-2">
                     <input type="submit" class="form-control btn btn-default" name="search" id="search-btn"
