--- a/core/css/style.css
+++ b/core/css/style.css
@@ -671,3 +671,82 @@ margin: auto;
 #about-text{
     font-size: 18px;
 }
+
+
+
+/*       POP UP WINDOW               */
+
+#pop-up{
+    position: fixed;
+    right: 30px;
+    bottom: 30px;
+    width: 300px;
+    height: 180px;
+    background-color: white;
+    box-shadow: 4px 4px 20px rgba(0, 0, 0, .1);
+    display: none;
+    z-index: 1000;
+}
+
+
+#pop-up h4{
+    color: red;
+}
+
+
+#new-badge{
+    position: absolute;
+    top: -10px;
+    left: -10px;
+    background-color: red;
+    color: white;
+    width: 40px;
+    height: 40px;
+    padding-top: 9px;
+    border-radius: 50%;
+    font-weight: bold;
+}
+
+#pop-cls-btn{
+    position: absolute;
+    top: 0px;
+    right: 10px;
+    border: none;
+    background-color: transparent;
+    font-size: 20px;
+    color: grey;
+    cursor: pointer;
+}
+
+#pop-cls-btn:hover{
+    opacity: .8;
+}
+
+@keyframes slideIn {
+    from {
+        opacity: 0;
+        transform: translateX(100%);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+@keyframes fadeOut {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
+}
+
+
+#pop-up.slide-in {
+    animation: slideIn 0.5s forwards;
+}
+
+#pop-up.fade-out {
+    animation: fadeOut 0.5s forwards;
+}
