--- a/template/index.html
+++ b/template/index.html
@@ -8,13 +8,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="core/css/style.css" rel="stylesheet" type="text/css" />
-    <script src="core/scripts/api.js"></script>
 </head>
 
 <body style="background-image: url('%!BGIMAGE!%');">
+
+    %!POPUP!%
     %!NAVIGATION!%
     %!CONTENT!%
     %!FOOTER!%
+
+    <script src="core/scripts/api.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
