--- a/template/pop-up-block.html
+++ b/template/pop-up-block.html
@@ -2,6 +2,6 @@
     <span id="new-badge">ÚJ!</span>
     <span id="pop-cls-btn">x</span>
     <h4 class="mt-3 mb-1">Új recept!</h4>
-    <h2 id="recepie-name" class="my-3 ">Mákos guba</h2>
-    <a href="" id="pop-up-link" target="_self" class="btn btn-default mt-2">Megnézem</a>
+    <h2 id="recepie-name" class="my-3 "></h2>
+    <a href="" id="pop-up-link" target="_self" class="btn btn-default mt-2 mb-4">Megnézem</a>
 </div>
