--- a/core/css/style.css
+++ b/core/css/style.css
@@ -1,4 +1,6 @@
+
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 
 :root {
     --main-bg-color: #eeeeee;
@@ -22,7 +24,7 @@ body {
     background-repeat: repeat;
     background-size: auto;
     background-position: top left;
-    font-family: "Montserrat", sans-serif;
+    font-family: "Montserrat", serif;
 }
 
 a {
